# Easy_CMakefile

./: CMakeLists.txt  README.md
src/: main.cpp
